--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=conexa
 server.port=8080
-server.servlet.context-path: /conexa-api/v1
+server.servlet.context-path = /conexa-api/v1
