Cambio properties para debug swagger deployado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=conexa
 server.port=8080
 server.servlet.context-path = /conexa-api/v1
+springdoc.swagger-ui.url=https://unchanged-karlie-matiasbragadini-ef7121c6.koyeb.app
