Agrego profiles para poder usaw swagger deployado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=conexa
 server.port=8080
 server.servlet.context-path = /conexa-api/v1
+swagger.server-url=http://localhost:8080
