upd app properties

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,1 @@
-swagger.server-url=https://unchanged-karlie-matiasbragadini-ef7121c6.koyeb.app
+swagger.server-url=https://unchanged-karlie-matiasbragadini-ef7121c6.koyeb.app/conexa-api/v1
